--- a/foundations/flex/03-flex-header-2/index.html
+++ b/foundations/flex/03-flex-header-2/index.html
@@ -8,19 +8,23 @@
     <link rel="stylesheet" href="style.css">
   </head>
   <body>
-    <div class="header">
-      <div class="logo">
-        LOGO
+    <div class="header">\
+      <div class="group">
+        <div class="logo">
+          LOGO
+        </div>
+        <ul class="links">
+          <li><a href="https://google.com">link-one</a></li>
+          <li><a href="https://google.com">link-two</a></li>
+          <li><a href="https://google.com">link-three</a></li>
+        </ul>
       </div>
-      <ul class="links">
-        <li><a href="https://google.com">link-one</a></li>
-        <li><a href="https://google.com">link-two</a></li>
-        <li><a href="https://google.com">link-three</a></li>
-      </ul>
-      <button class="notifications">
-        1 new notification
-      </button>
-      <div class="profile-image"></div>
+      <span>
+        <button class="notifications">
+          1 new notification
+        </button>
+        <div class="profile-image"></div>
+      </span>
     </div>
   </body>
 </html>
